// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Accordion/Item Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item IsDefaultExpanded play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_open_1fab9_27"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_1fab9_119 _content_medium_1fab9_130">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item IsExpanded play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_open_1fab9_27"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_1fab9_119 _content_medium_1fab9_130">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item PersistFocusOnClick play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_open_1fab9_27"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_1fab9_119 _content_medium_1fab9_130">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button id="htmlId"
              class="_header_1fab9_14  _header_medium_1fab9_75 dummyClassname"
              lang="nb"
              data-testid="123ID"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75  dummyClassname"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104 dummyClassname">
            Meg selv
          </div>
          <p class="_subtitle_1fab9_111 dummyClassname">
            Beskrivelse
          </p>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_open_1fab9_27"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_1fab9_119 _content_medium_1fab9_130  dummyClassname">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithCustomIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
        </div>
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithLineBreak smoke-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Tittel som
brekker over flere
linjer
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithOnClick play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithPersistedState play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="true"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_open_1fab9_27"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_1fab9_119 _content_medium_1fab9_130">
      <div class="_container_1k24j_5  ">
        <input id="checkboxInputId-:ri:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:ri:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Jeg er valgt
            </span>
          </span>
        </label>
        <div id="checkboxErrorId-:rj:"
             aria-live="assertive"
             aria-atomic="true"
        >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <div class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
              id="dummyIdForwardedFromRef"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Meg selv
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </div>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Item WithTitleAs play-test 1`] = `
<div data-test-block="true">
  <div class="_accordionItem_1fab9_1">
    <h1 class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Heading h1
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </h1>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_1fab9_1">
    <h2 class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Heading h2
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </h2>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_1fab9_1">
    <h3 class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Heading h3
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </h3>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_1fab9_1">
    <h4 class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Heading h4
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </h4>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_1fab9_1">
    <h5 class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Heading h5
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </h5>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
  <div class="_accordionItem_1fab9_1">
    <h6 class="_tag_1fab9_11">
      <button class="_header_1fab9_14  _header_medium_1fab9_75"
              aria-expanded="false"
              type="button"
      >
        <div class="_titleWrapper_1fab9_80">
          <div class="_title_1fab9_80 _title_medium_1fab9_104">
            Heading h6
          </div>
        </div>
        <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
            </path>
          </svg>
        </div>
      </button>
    </h6>
    <div class="_content_collapsed_1fab9_124">
      Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
    </div>
  </div>
</div>
`;
